Bug 349078 - Canvas resize and image trim bug
Summary: Canvas resize and image trim bug
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Transform (other bugs)
Version First Reported In: unspecified
Platform: Microsoft Windows Microsoft Windows
: NOR major
Target Milestone: ---
Assignee: Krita Bugs
URL: sta.sh/2pct1qfscze
Keywords:
Depends on:
Blocks:
 
Reported: 2015-06-12 21:12 UTC by Ula
Modified: 2015-06-18 08:34 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ula 2015-06-12 21:12:02 UTC
Happens in 2.9.5 version (but there is no option for that). When I try to resize canvas either by Resize Canvas option or Trim to Layer/Selection it shows to apply change but I can't use it or change in any way. Shown on screen shots in the link. They are all described.

Reproducible: Always

Steps to Reproduce:
1. resize canvas / trim to layer / trim to selection
2. paint over extended part of a canvas


Actual Results:  
nothing happens

Expected Results:  
brush stroke should appear
Comment 1 Dmitry Kazakov 2015-06-18 08:34:50 UTC
Git commit fc3fcc743d9706f13167b7317fdfb10c02fce7a9 by Dmitry Kazakov.
Committed on 18/06/2015 at 08:30.
Pushed by dkazakov into branch 'calligra/2.9'.

Fix Adjustment layers composition

This was a very old bug related the way how selection is applied
to adjustment layers. Now selection defines not "how the filtered
data is blended into the image" but "how the filter effect is applied
to the composed image". In the result, erasing the selection now will
*not* make your image fully transparent, but just removes the filter
effect from that area.
Related: bug 324505, bug 294122
CC:kimageshop@kde.org

M  +2    -1    krita/image/kis_adjustment_layer.cc
M  +19   -3    krita/image/kis_async_merger.cpp
M  +39   -25   krita/image/kis_selection_based_layer.cpp
M  +21   -0    krita/image/kis_selection_based_layer.h

http://commits.kde.org/calligra/fc3fcc743d9706f13167b7317fdfb10c02fce7a9
Comment 2 Dmitry Kazakov 2015-06-18 08:34:51 UTC
Git commit cbd260cc9c50c482e4549f8deb9771f1ef49986c by Dmitry Kazakov.
Committed on 18/06/2015 at 08:32.
Pushed by dkazakov into branch 'calligra/2.9'.

Fix trimming an image under Filter Layers

1) We shouldn't count need and change rects of invisible layers
2) Adjustment layers should not crop change rect anymore

M  +5    -4    krita/image/kis_adjustment_layer.cc
M  +7    -1    krita/image/kis_base_rects_walker.h

http://commits.kde.org/calligra/cbd260cc9c50c482e4549f8deb9771f1ef49986c