Fix trimming an image under Filter Layers

1) We shouldn't count need and change rects of invisible layers
2) Adjustment layers should not crop change rect anymore

BUG:349078